--- a/CloudCache/build.gradle
+++ b/CloudCache/build.gradle
@@ -32,5 +32,5 @@ jar {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    /*testCompile('org.springframework.boot:spring-boot-starter-test')*/
 }
